--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ configparser = "3.0.4"
 
 [features]
 disablekomsiport = []
+enablefilelogging = []  # Schalter für das Schreiben in die Datei
 
 
 [[bin]]
