--- a/TheBus2Komsi.ini
+++ b/TheBus2Komsi.ini
@@ -10,4 +10,6 @@
 portname = com22
 baudrate = 115200
 sleeptime = 200
-ip = 192.168.42.80
+game-ip = 192.168.42.80
+komsi-ip = 192.168.42.80
+komsi-port = 54321
